--- a/karriar/index.html
+++ b/karriar/index.html
@@ -53,123 +53,127 @@
 	  <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
 	</svg>
 
-<!-- Panel Top #10 -->
-<nav class="panel top forceMobileView white soft-shadow">
-  <div class="sections desktop">
-	    <div class="left">
-	      <ul class="menu crop small bold">
+	<!-- Panel Top #10 -->
+	<nav class="panel top forceMobileView white soft-shadow">
+		<div class="sections desktop">
+			<div class="left">
+				<ul class="menu crop small bold">
 					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
-	      </ul>
-	    </div>
-	    <div class="center"><a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-	    <div class="right">
-	      <ul class="menu crop small bold">
-	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-	        <li><a href="../karriar/">Karriär</a></li>
+				</ul>
+			</div>
+			<div class="center">
+				<a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+			</div>
+			<div class="right">
+				<ul class="menu crop small bold">
+					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
-	      </ul>
-	    </div>
-  </div>
-  <div class="sections compact hidden">
-    <div class="left"><a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a></div>
-    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
-  </div>
-</nav>
+				</ul>
+			</div>
+		</div>
+		<div class="sections compact hidden">
+			<div class="left">
+				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a>
+			</div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+		</div>
+	</nav>
 
-<!-- Sidebar -->
-<nav class="sidebar white" data-sidebar-id="1">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-  <div class="content">
-    <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
-    <ul class="mainMenu text-blue">
-      <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-			<br>
-			<br>
-      <li><a href="../kontakt/">Kontakt</a></li>
-			<br>
-			<br>
-			<li><a href="../karriar/">Karriär</a></li>
-			<br>
-			<br>
-      <li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
-    </ul>
-    <ul class="subMenu">
-			<li><a href="../om_oss/">Om oss</a></li>
-			<br>
-			<br>
-      <li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
-			<br>
-			<br>
-			<li><a href="../nyheter/">Nyheter</a></li>
-    </ul>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+			<ul class="mainMenu text-blue">
+				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<br>
+				<br>
+				<li><a href="../kontakt/">Kontakt</a></li>
+				<br>
+				<br>
+				<li><a href="../karriar/">Karriär</a></li>
+				<br>
+				<br>
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
+			</ul>
+			<ul class="subMenu">
+				<li><a href="../om_oss/">Om oss</a></li>
+				<br>
+				<br>
+				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+				<br>
+				<br>
+				<li><a href="../nyheter/">Nyheter</a></li>
+			</ul>
 
-  </div>
-</nav>
+		</div>
+	</nav>
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade contact" id="">
-  <div class="content">
-    <div class="container" style="height:660px;">
-      <div class="wrap">
-        <div class="container-lg" >
-          <h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
-					<p class="">
-						<a href="#bmText">
+	<section class="slide fade contact" id="">
+		<div class="content">
+			<div class="container" style="height:660px;">
+				<div class="wrap">
+					<div class="container-lg">
+						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
+						<p class="">
+							<a href="#bmText">
 							Läs mer nedan
 							<br>
 							v
 						</a>
-					</p>
-        </div>
-      </div>
-    </div>
-  </div>
-	<div class="background" style="background-image:url(../assets/img/ispect/bm_ipad.jpg)"></div>
-</section>
-<section class="slide whiteSlide kenBurns fromRight" data-name="bmText">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="background" style="background-image:url(../assets/img/ispect/bm_ipad.jpg)"></div>
+	</section>
+	<section class="slide whiteSlide kenBurns fromRight" data-name="bmText">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
 
-        <div class="fix-12-12">
-          <ul class="flex reverse flex-phone">
-            <li class="col-6-12 left ae-1 fromLeft">
-              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän"/>
-            </li>
-            <li class="col-6-12 left cell-32">
-              <h1 class="">Vill du...</h1>
-              <ul class="items-32">
-                <li class="fix-4-12 toLeft text-32">
-                  <p class="ae-4">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
-                </li>
-                <li class="fix-4-12 toLeft text-32">
-                  <p class="ae-6">− Arbeta i det företag som leder branschens förnyelse?</p>
-                </li>
-                <li class="fix-4-12 toLeft text-32">
-                  <p class="ae-6">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-                </li>
-                <li class="fix-4-12 toLeft text-32">
-                  <p class="ae-6">− Bli medarbetare oavsett var i landet du bor?</p>
-                </li>
-								<li class="fix-4-12 toLeft text-32">
-									<a href="mailto:info@besiktningsman.se" class="blue common-Button">Ta kontakt med oss!</a>
-								</li>
-              </ul>
-            </li>
+					<div class="fix-12-12">
+						<ul class="flex reverse flex-phone">
+							<li class="col-6-12 left ae-1 fromLeft">
+								<img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
+							</li>
+							<li class="col-6-12 left cell-32">
+								<h1 class="">Vill du...</h1>
+								<ul class="items-32">
+									<li class="fix-4-12 toLeft text-32">
+										<p class="ae-4">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+									</li>
+									<li class="fix-4-12 toLeft text-32">
+										<p class="ae-6">− Arbeta i det företag som leder branschens förnyelse?</p>
+									</li>
+									<li class="fix-4-12 toLeft text-32">
+										<p class="ae-6">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+									</li>
+									<li class="fix-4-12 toLeft text-32">
+										<p class="ae-6">− Bli medarbetare oavsett var i landet du bor?</p>
+									</li>
+									<li class="fix-4-12 toLeft text-32">
+										<a href="mailto:info@besiktningsman.se" class="blue common-Button">Ta kontakt med oss!</a>
+									</li>
+								</ul>
+							</li>
 
-          </ul>
-        </div>
+						</ul>
+					</div>
 
-      </div>
-    </div>
-  </div>
+				</div>
+			</div>
+		</div>
 
-</section>
+	</section>
 
 	<section class="slide blue autoHeight customFooter">
 		<div class="content">
