--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -50,36 +50,40 @@
 	  <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
 	</svg>
 
-<!-- Panel Top #10 -->
-<nav class="panel top forceMobileView white soft-shadow">
-  <div class="sections desktop">
-	    <div class="left">
-	      <ul class="menu crop small bold">
+	<!-- Panel Top #10 -->
+	<nav class="panel top forceMobileView white soft-shadow">
+		<div class="sections desktop">
+			<div class="left">
+				<ul class="menu crop small bold">
 					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
-	      </ul>
-	    </div>
-	    <div class="center"><a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
-	    <div class="right">
-	      <ul class="menu crop small bold">
-	        <li><a href="../erbjudande/">Vårt erbjudande</a></li>
-	        <li><a href="../karriar/">Karriär</a></li>
+				</ul>
+			</div>
+			<div class="center">
+				<a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+			</div>
+			<div class="right">
+				<ul class="menu crop small bold">
+					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
-	      </ul>
-	    </div>
-  </div>
-  <div class="sections compact hidden">
-    <div class="left"><a href="../"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a></div>
-    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
-  </div>
-</nav>
+				</ul>
+			</div>
+		</div>
+		<div class="sections compact hidden">
+			<div class="left">
+				<a href="../"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+			</div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+		</div>
+	</nav>
 
-<!-- Sidebar -->
-<nav class="sidebar white" data-sidebar-id="1">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-  <div class="content">
-    <a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
 				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
 				<br>
@@ -103,60 +107,60 @@
 				<li><a href="../nyheter/">Nyheter</a></li>
 			</ul>
 
-  </div>
-</nav>
+		</div>
+	</nav>
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade kenBurns" id="">
-  <div class="content">
-    <div class="container" style="height: 360px;">
-      <div class="wrap">
-        <div class="fix-10-12">
-					<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-	<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
-</section>
-<section class="slide fade kenBurns whiteSlide">
-  <div class="content">
-    <div class="container-lg  margin-top-1 margin-bottom-10">
-      <div class="wrap">
+	<section class="slide fade kenBurns" id="">
+		<div class="content">
+			<div class="container" style="height: 360px;">
+				<div class="wrap">
+					<div class="fix-10-12">
+						<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
+	</section>
+	<section class="slide fade kenBurns whiteSlide">
+		<div class="content">
+			<div class="container-lg  margin-top-1 margin-bottom-10">
+				<div class="wrap">
 
-        <div class="fix-10-12">
-          <h1 class="ae-1 fromLeft left">Backåkra</h1>
-					<p>
-						I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm.  Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
-					</p>
-          <div class="ae-2 fromLeft left">
-            <img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
-						<p class="small bold" style="font-size: 18px;">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
-          </div>
-        </div>
-      </div>
+					<div class="fix-10-12">
+						<h1 class="ae-1 fromLeft left">Backåkra</h1>
+						<p>
+							I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
+						</p>
+						<div class="ae-2 fromLeft left">
+							<img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
+							<p class="small bold" style="font-size: 18px;">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
+						</div>
+					</div>
+				</div>
 
-    </div>
-  </div>
-</section>
-<section class="slide whiteSlide">
-  <div class="content">
-    <div class="container-lg margin-bottom-10">
-      <div class="wrap">
+			</div>
+		</div>
+	</section>
+	<section class="slide whiteSlide">
+		<div class="content">
+			<div class="container-lg margin-bottom-10">
+				<div class="wrap">
 
-        <div class="fix-10-12">
-          <h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
-          <div class="ae-2 fromLeft left">
-            <p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
-						<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
-          </div>
-        </div>
-      </div>
+					<div class="fix-10-12">
+						<h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
+						<div class="ae-2 fromLeft left">
+							<p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
+							<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
+						</div>
+					</div>
+				</div>
 
-    </div>
-  </div>
-</section>
+			</div>
+		</div>
+	</section>
 	<section class="slide blue autoHeight customFooter">
 		<div class="content">
 			<div class="container">
