--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -130,32 +130,33 @@
 	</section>
 	<!-- Slide #24 -->
 	<section class="slide whiteSlide kenBurns">
-	  <div class="content">
-	    <div class="container">
-	      <div class="wrap">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
 
-	        <div class="fix-10-12">
-	          <h1 class="fromCenter">
+					<div class="fix-10-12">
+						<h1 class="fromCenter">
 							Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.
 						</h1>
 						<br>
 						<h2 class="small">
 							Över hela landet och med en modern digitaliserad metod.
 						</h2>
-	          <div class="margin-bottom-4 border-bottom-grey"></div>
-	          <div class="left ae-5 cropBottom">
-	            <p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden</p>
-							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga fack.</p>
+						<div class="margin-bottom-4 border-bottom-grey"></div>
+						<div class="left ae-5 cropBottom">
+							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden</p>
+							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
+								fack.</p>
 							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
 							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
 							<button class="common-Button white text-blue fromLeft popupTrigger" data-popup-id="ispect-details">Mer om vårt helhetskoncept</button>
 						</div>
-	        </div>
+					</div>
 
-	      </div>
-	    </div>
-	  </div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- team -->
 	<section class="slide whiteSlide margin-bottom-5" id="team" data-name="team">
@@ -212,11 +213,11 @@
 							</li>
 						</ul>
 
-						</div>
-
 					</div>
+
 				</div>
 			</div>
+		</div>
 	</section>
 	<!-- Slide #68 -->
 	<section class="slide whiteSlide margin-bottom-10" id="partners">
@@ -397,85 +398,77 @@
 			</div>
 		</div>
 	</section>
-<!-- ispect details Popup Text -->
-<div class="popup white" data-popup-id="ispect-details">
-	<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
-	<div class="content popupContent">
+	<!-- ispect details Popup Text -->
+	<div class="popup white" data-popup-id="ispect-details">
+		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+		<div class="content popupContent">
 
-		<section class="slide white">
-		  <div class="content">
-		    <div class="container">
-		      <div class="container-lg">
-            <h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
-            <h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
-						<div class="margin-bottom-4 border-bottom-grey"></div>
-		        <div class="fix-12-12">
-		          <ul class="grid">
-		            <li class="col-4-12 left">
-		              <h3 class="text-blue">Skillnader</h3>
-		              <p class="small">
-										Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
-										<br>
-										<br>
-										Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
-									</p>
-		            </li>
-		            <li class="col-4-12 left ">
-		              <h3 class="text-blue">Fördelar</h3>
-		              <p class="small">
-										•	Inga dolda fel
-										<br>
-										•	Inga onödiga produktionsstopp
-										<br>
-										•	Ökad kvalitetssträvan främjas
-										<br>
-										•	Säker och lättillgänglig dokumentation
-										<br>
-										•	Ökad möjlighet till direkt erfarenhetsåterföring
-										<br>
-										•	Möjlighet till noll fel vid överlämnandet
-										<br>
-										•	Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
-									</p>
-		            </li>
-		            <li class="col-4-12 left">
-		              <h3 class="text-blue">Effekter</h3>
-		              <p class="small">
-										Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
-										<br>
-										<br>
-										Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
-									</p>
-		            </li>
-		          </ul>
-		        </div>
-
-		      </div>
-		    </div>
-		  </div>
-		</section>
-		<section class="slide white">
+			<section class="slide white">
 				<div class="content">
 					<div class="container">
 						<div class="container-lg">
-
-					      <ul class="flex reverse">
-					        <li class="col-6-12 left cell-32">
-					          <h1>Med iSpect</h1>
-										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
-					        </li>
-					        <li class="col-6-12 left">
-					          <img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump"/>
-					        </li>
-					      </ul>
+							<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med iSpect </h1>
+							<h2 class="center small">- För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
+							<div class="margin-bottom-4 border-bottom-grey"></div>
+							<div class="fix-12-12">
+								<ul class="grid">
+									<li class="col-4-12 left">
+										<h3 class="text-blue">Skillnader</h3>
+										<p class="small">
+											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
+											<br>
+											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+										</p>
+									</li>
+									<li class="col-4-12 left ">
+										<h3 class="text-blue">Fördelar</h3>
+										<p class="small">
+											• Inga dolda fel
+											<br> • Inga onödiga produktionsstopp
+											<br> • Ökad kvalitetssträvan främjas
+											<br> • Säker och lättillgänglig dokumentation
+											<br> • Ökad möjlighet till direkt erfarenhetsåterföring
+											<br> • Möjlighet till noll fel vid överlämnandet
+											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
+										</p>
+									</li>
+									<li class="col-4-12 left">
+										<h3 class="text-blue">Effekter</h3>
+										<p class="small">
+											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
+											<br>
+											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
+										</p>
+									</li>
+								</ul>
+							</div>
 
 						</div>
 					</div>
 				</div>
-		</section>
+			</section>
+			<section class="slide white">
+				<div class="content">
+					<div class="container">
+						<div class="container-lg">
 
+							<ul class="flex reverse">
+								<li class="col-6-12 left cell-32">
+									<h1>Med iSpect</h1>
+									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+								</li>
+								<li class="col-6-12 left">
+									<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+								</li>
+							</ul>
+
+						</div>
+					</div>
+				</div>
+			</section>
+
+		</div>
 	</div>
-</div>
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated white" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
